fixed height of faq on mobile

--- a/src/scss/components/landing/cta/actions/_join.scss
+++ b/src/scss/components/landing/cta/actions/_join.scss
@@ -26,16 +26,23 @@
     text-indent: unset;
     margin: 0 auto;
   }
+  @include respond(phone) {
+    text-align: center;
+    padding-bottom: 2em;
+
+  }
   @include respond(phone-narrow) {
     width: 10em;
     margin: auto;
-    text-align: center;
-    padding-bottom: 2.5em;
   }
 }
 &__join-description-container {
   margin: 2% 44.01% 0 12.33%;
   white-space: nowrap;
+  @include respond(phone) {
+    justify-content: center;
+  }
+
 }
 &__join-description {
   font-family: SofiaProSoftW01-Regular;
